[gd_scene load_steps=14 format=3 uid="uid://du8ssy1227k34"]

[ext_resource type="PackedScene" uid="uid://cmorv5pyx4phn" path="res://scripts/classes/menus.tscn" id="1_xgpu5"]
[ext_resource type="Texture2D" uid="uid://dj78t7fk71vl0" path="res://assets/sprites/ui/menu_background.png" id="2_85pre"]
[ext_resource type="Script" path="res://ui/menus/pause_menu.gd" id="2_hr8f6"]
[ext_resource type="Theme" uid="uid://d4gsvekoqjros" path="res://assets/themes/icon__menu_panel_theme.tres" id="3_0e7rs"]
[ext_resource type="Texture2D" uid="uid://ct27x2ccpt4bt" path="res://assets/sprites/ui/coin.png" id="4_5rhab"]
[ext_resource type="Theme" uid="uid://b4q7bpijyr7ol" path="res://assets/themes/Objective_label_theme.tres" id="5_ctgi4"]
[ext_resource type="Theme" uid="uid://bp21tk2vfowe5" path="res://assets/themes/xp_icon_theme.tres" id="6_n16ac"]
[ext_resource type="Theme" uid="uid://cgi8bxd4ey6hu" path="res://assets/themes/title_theme.tres" id="7_eccfc"]
[ext_resource type="Texture2D" uid="uid://b5he6l7cp7o27" path="res://assets/sprites/ui/Line 1.svg" id="8_cfhm6"]
[ext_resource type="Theme" uid="uid://dcgvgel77iwan" path="res://assets/themes/objective_xp_theme.tres" id="9_0678m"]
[ext_resource type="Theme" uid="uid://cqajmgbj0kgsk" path="res://assets/themes/progress_bar_theme.tres" id="10_fw3pv"]
[ext_resource type="Theme" uid="uid://ces6mx84dvs8r" path="res://assets/themes/button_theme.tres" id="11_ewf75"]

[sub_resource type="LabelSettings" id="LabelSettings_hikhc"]
font_size = 24
font_color = Color(0.956863, 0.956863, 0.956863, 1)
outline_color = Color(0.956863, 0.956863, 0.956863, 1)

[node name="PauseMenu" instance=ExtResource("1_xgpu5")]
script = ExtResource("2_hr8f6")

[node name="BG" type="TextureRect" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.43
anchor_bottom = 1.0
offset_left = -1.24335
offset_right = 1.24335
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_85pre")
expand_mode = 3

[node name="TopLeftLabels" type="HBoxContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = -1
offset_left = 40.0
offset_top = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 24

[node name="Coins" type="HBoxContainer" parent="TopLeftLabels" index="0"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CoinsBox" type="PanelContainer" parent="TopLeftLabels/Coins" index="0"]
layout_mode = 2
theme = ExtResource("3_0e7rs")

[node name="CoinsIcon" type="TextureRect" parent="TopLeftLabels/Coins/CoinsBox" index="0"]
layout_mode = 2
texture = ExtResource("4_5rhab")
expand_mode = 2

[node name="CoinsLabel" type="Label" parent="TopLeftLabels/Coins" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_ctgi4")
theme_override_font_sizes/font_size = 32
text = "12"

[node name="Score" type="HBoxContainer" parent="TopLeftLabels" index="1"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScoreBox" type="PanelContainer" parent="TopLeftLabels/Score" index="0"]
layout_mode = 2
theme = ExtResource("3_0e7rs")

[node name="ScoreText" type="Label" parent="TopLeftLabels/Score/ScoreBox" index="0"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("6_n16ac")
theme_override_colors/font_color = Color(0.470588, 0.396078, 0.917647, 1)
theme_override_font_sizes/font_size = 32
text = "XP"

[node name="ScoreLabel" type="Label" parent="TopLeftLabels/Score" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_ctgi4")
theme_override_font_sizes/font_size = 32
text = "320"

[node name="Objectives" type="VBoxContainer" parent="." index="3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.35
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 140.0
offset_right = -40.0
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="Label" type="Label" parent="Objectives" index="0"]
layout_mode = 2
theme = ExtResource("7_eccfc")
text = "Objetivos"

[node name="Separator" type="TextureRect" parent="Objectives" index="1"]
layout_mode = 2
texture = ExtResource("8_cfhm6")

[node name="Spacer" type="MarginContainer" parent="Objectives" index="2"]
layout_mode = 2
theme_override_constants/margin_bottom = 16

[node name="Obj1Container" type="VBoxContainer" parent="Objectives" index="3"]
layout_mode = 2

[node name="Obj1HBox" type="HBoxContainer" parent="Objectives/Obj1Container" index="0"]
layout_mode = 2

[node name="Obj1Label" type="Label" parent="Objectives/Obj1Container/Obj1HBox" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_ctgi4")
text = "Colete 50 moedas"
label_settings = SubResource("LabelSettings_hikhc")
justification_flags = 160

[node name="Obj1XP" type="Label" parent="Objectives/Obj1Container/Obj1HBox" index="1"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("9_0678m")
text = "5000 xp"

[node name="Obj1Bar" type="ProgressBar" parent="Objectives/Obj1Container" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("10_fw3pv")

[node name="Obj2Container" type="VBoxContainer" parent="Objectives" index="4"]
layout_mode = 2

[node name="Obj2Hbox" type="HBoxContainer" parent="Objectives/Obj2Container" index="0"]
layout_mode = 2

[node name="Obj2Label" type="Label" parent="Objectives/Obj2Container/Obj2Hbox" index="0"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("5_ctgi4")
text = "Fa√ßa 15 pegadinhas"
label_settings = SubResource("LabelSettings_hikhc")

[node name="Obj2XP" type="Label" parent="Objectives/Obj2Container/Obj2Hbox" index="1"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("9_0678m")
text = "5000 xp"

[node name="Obj2Bar" type="ProgressBar" parent="Objectives/Obj2Container" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("10_fw3pv")

[node name="Buttons" type="VBoxContainer" parent="." index="4"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.35
anchor_bottom = 1.0
offset_left = 40.0
offset_right = -40.0
offset_bottom = -80.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="ResumeButton" type="Button" parent="Buttons" index="0"]
layout_mode = 2
theme = ExtResource("11_ewf75")
text = "Retornar ao jogo"

[node name="RestartButton" type="Button" parent="Buttons" index="1"]
layout_mode = 2
theme = ExtResource("11_ewf75")
text = "Retornar ao menu principal"

[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
